# Haskell-GU

./: CHANGELOG.md  Exv6.hs  Haskell-GU.cabal  LICENSE  Pages.md  README.md  lab1.hs  lec2a.hs  lec3a.hs
exam/: ExJan20.hs  ExJan25.hs  ExOct22.hs  ExOct24.hs
programming-in-haskell/: Ch9.hs  Doj.hs  Ex5.hs  Ex6.hs  ch5.hs  ex1.hs  ex1_7.hs  ex2.hs  ex3.hs  ex4.hs
v1/: exv1.hs  lec1a.hs  lec2b.hs  lec3.hs  stud1.hs
v2/: exv2.hs  lec2a.hs  lec2b.hs  lec2c.hs
v3/: exv3.hs  lec3a.hs  lec3b.hs  lec3c.hs  test.txt
v4/: Exv4.hs  Lec4a.hs  Lec4b.hs
v5/: Exv5.hs  Lec5a.hs  Lec5b.hs
v6/: Lec6a.hs
v7/Lec7a/: Lec7a.hs  TableList.hs  TableTree.hs
