cabal-version:      3.0
name:               Haskell-GU
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Max Jenslöv
maintainer:         max@jenslov.se
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Ch5
        Doj
        Ex1
        Ex2
        Ex3
        Ex4
        Exv1
        Lec1a
        Lec2b
        Stud1
        Exv2
        Lec2a
        Lec2b
        Lec2c
        Exv3
        Lec3a
        Lec3b
        Lec3c
 
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.3.0

    hs-source-dirs:   
        programming-in-haskell
        v1
        v2
        v3
    default-language: Haskell2010


