cabal-version:      3.0
name:               Haskell-GU
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Max Jenslöv
maintainer:         max@jenslov.se
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Ch9
        Ex1
        Ex2
        Ex3
        Ex4
        Ex5
        Ex6
        Exv1
        Lec1a
        Stud1
        Exv2
        Lec2a
        Lec2b
        Lec2c
        Exv3
        Lec3a
        Lec3b
        Lec3c
        Lec4a
        Lec4b
        Exv4
        Lec5a
        Lec5b
        Exv5
        Lec6a
        Exv6
        Lec7a
 
    -- other-modules:
    -- other-extensions:
    build-depends:    
        directory ^>=1.3.8.5,
        QuickCheck ^>=2.16.0.0,
        base ^>=4.18.3.0,       

    hs-source-dirs:   
        programming-in-haskell
        v1
        v2
        v3
        v4
        v5
        v6
        v7
        Lec7a
        exam
    default-language: Haskell2010


